--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html, body
 {
   background-color: #009688;
   color: white;
+  height: 100% !important;
   font-family: 'Roboto', sans-serif;
 }
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
@@ -51,19 +52,35 @@ html, body
 {
   content: url(play-button.png);
   margin-right: 20px;
+  filter:  grayscale(100%);
 }
 .item-movie
 {
+  display:table;
   text-align: left;
   transition: all 100ms ease-out;
   cursor: pointer;
   padding: 10px;
+  font-size: 16px;
   border-bottom: 1px solid rgba(255,255,255, 0.2);
+}
+.item-movie span{
+  display:table-cell;
+ vertical-align:middle;
+}
+.item-movie span:nth-child(2){
+  
+  color: #FFC107;
 }
 .item-movie:hover
 {
-  background-color: white;
-  color:  #009688;
+  margin-left: 20px;
+}
+.item-movie:hover span{
+  font-weight: bold;
+}
+.item-movie:hover::before{
+  filter: grayscale(0%);
 }
 .buscando-info
 {
@@ -88,9 +105,20 @@ html, body
 {
   background-color: #EEEEEE;
 }
+.resultados{
+  
+  border-right: 2px solid rgba(255, 255, 255, 0.1);
+  margin-right: 0;
+  min-height: 80%;
+}
+
 .soundtracks-header
 {
   font-size: 18px;
+}
+.soundtrack-results{
+  
+  margin-left: 0;
 }
 .header-info
 {
@@ -143,4 +171,23 @@ html, body
   color: white;
   opacity: 0.7;
   display: none;
+}
+
+.cover {
+    width: 300px;
+    height: 300px;
+    display: inline-block;
+    background-size: cover;
+}
+.cover:hover {
+    cursor: pointer;
+}
+.cover.playing {
+    border: 5px solid #e45343;
+}
+
+.track-item{
+  padding: 15px 0;
+  cursor: pointer;
+  margin: 5px 0;
 }
